--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,60 @@
 site_name: Antimony
+site_author: Kian Gribi
 site_url: https://antimony-team.github.io/
+
+repo_name: antimony-team/antimony-backend
+repo_url: https://github.com/squidfunk/mkdocs-material
+
 theme:
   name: material
+  custom_dir: docs/overrides
+
+  # 404 page
+  static_templates:
+    - 404.html
+
+  # Don't include MkDocs' JavaScript
+  include_search_page: false
+  search_index_only: true
+
+  features:
+    - navigation.top
+    - navigation.tabs
+    - search.suggest
+    - content.code.annotate
+    - content.code.copy
+    - content.action.edit
+    - toc.follow
+    - content.tooltips
+    - navigation.indexes
+    - content.footnote.tooltips
+
+  language: en
+  palette:
+    # Light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: white
+      accent: cyan
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    # Dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      accent: cyan
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+  icon:
+    logo: logo
+    repo: fontawesome/brands/github
+    edit: material/file-edit-outline
+  favicon: images/favicon.svg
+
+plugins:
+  - offline
+
+extra_css:
+  - stylesheets/extra.css
