--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.9.0
 babel==2.17.0
 backrefs==5.8
+beautifulsoup4==4.13.4
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -20,6 +21,7 @@ mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.6.11
 mkdocs-material-extensions==1.3.1
+mkdocs-swagger-ui-tag==0.7.1
 mkdocs_puml==2.3.0
 msgpack==1.1.0
 packaging==24.2
@@ -35,5 +37,7 @@ requests==2.32.3
 rich==13.9.4
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
+typing_extensions==4.14.0
 urllib3==2.3.0
 watchdog==6.0.0
