--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,6 @@ services:
       - ./postgres:/docker-entrypoint-initdb.d/
     ports:
       - "5432:5432"
-  router:
-    image: nginx:alpine
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - backend
-      - frontend
 
   frontend:
     container_name: frontend
@@ -53,3 +44,16 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "3000:3000"
+
+  router:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/www/certbot:/var/www/certbot:ro
+    depends_on:
+      - backend
+      - frontend
