--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,40 @@
 events {}
 
-http {
-    server {
-        listen 80;
-        listen 443;
+server {
+    listen 80;
+    server_name example.com www.example.com;
 
-        location /api/ { 
-            proxy_pass http://backend:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
-        location /socket.io/ { 
-            proxy_pass http://backend:3000/socket.io/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
-        location / {
-            proxy_pass http://frontend:8100/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+server {
+    listen 443 ssl;
+    server_name example.com www.example.com;
+
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+
+    location /api/ { 
+        proxy_pass http://backend:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /socket.io/ { 
+        proxy_pass http://backend:3000/socket.io/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location / {
+        proxy_pass http://frontend:8100/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
