--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,10 @@
+general:
+  # The provider that will be used to deploy nodes [containerlab, clabernetes].
+  # Default: containerlab
+  provider: containerlab
 server:
   # Default: 127.0.0.1
-  host: 0.0.0.0
+  host: 127.0.0.1
   # Default: 3000
   port: 3000
 auth:
@@ -26,7 +30,7 @@ shell:
   timeout: 1800
 database:
   # Default: 127.0.0.1
-  host: database
+  host: 127.0.0.1
   # Default: 5432
   port: 5432
   # Default: antimony
