--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ name: antimony
 
 services:
   traefik:
-    image: traefik:v2.10
+    image: traefik:v3.4.1
     restart: unless-stopped
     container_name: traefik
+    network_mode: host
     command:
       - "--log.level=INFO"
       - "--api.insecure=true"
       - "--providers.docker=true"
+      - "--providers.docker.exposedByDefault=false"
 
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
@@ -25,24 +27,21 @@ services:
       # Self-signed fallback
       - "--entrypoints.websecure.forwardedHeaders.insecure=true"
       - "--serversTransport.insecureSkipVerify=true"
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8000:8080"
 
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./letsencrypt:/letsencrypt"
 
     depends_on:
-     - backend
-     - frontend
+     - server
+     - interface
 
   database:
     container_name: database
     image: postgres
     restart: always
     shm_size: 128mb
+    network_mode: host
     environment:
       - POSTGRES_PASSWORD=postgres
       - SB_DATABASE_PASSWORD=antimony
@@ -55,32 +54,32 @@ services:
     volumes:
       - ./.db:/var/lib/postgresql/data
       - ./postgres:/docker-entrypoint-initdb.d/
-    ports:
-      - "5432:5432"
 
-  frontend:
-    container_name: frontend
+  interface:
+    container_name: interface
     image: ghcr.io/antimony-team/antimony-interface:latest
     depends_on:
-      - backend
+      - server
+    network_mode: host
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
-      - "traefik.http.routers.frontend.entrypoints=websecure"
-      - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.frontend.service=frontend"
-      # - "traefik.http.routers.frontend.tls.domains[0].main=example.com
-      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
-      - "traefik.http.services.backend-socket.loadbalancer.server.scheme=http"
+      - "traefik.http.routers.interface.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.interface.entrypoints=websecure"
+      - "traefik.http.routers.interface.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.interface.service=interface"
+      # - "traefik.http.routers.interface.tls.domains[0].main=example.com"
+      - "traefik.http.services.interface.loadbalancer.server.port=8100"
+      - "traefik.http.services.interface.loadbalancer.server.scheme=http"
 
-  backend:
-    container_name: backend
+  server:
+    container_name: server
     image: ghcr.io/antimony-team/antimony-backend:latest
     environment:
       - SB_NATIVE_USERNAME=admin
       - SB_NATIVE_PASSWORD=admin
       - SB_DATABASE_PASSWORD=antimony
     privileged: true
+    network_mode: host
     command: -config=./config.yml
     volumes:
       - ./config.yml:/app/config.yml
@@ -92,31 +91,31 @@ services:
       database:
         condition: service_healthy
     labels:
-      # Backend /socket.io route
+      # Server /socket.io route
       - "traefik.enable=true"
-      - "traefik.http.routers.backend-socket.rule=PathPrefix(`/socket.io`)"
-      - "traefik.http.routers.backend-socket.entrypoints=websecure"
-      - "traefik.http.routers.backend-socket.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.backend-socket.service=backend-socket"
-      # - traefik.http.routers.backend-socket.tls.domains[0].main=example.com
-      - "traefik.http.services.backend-socket.loadbalancer.server.port=3000"
-      - "traefik.http.services.backend-socket.loadbalancer.server.scheme=http"
+      - "traefik.http.routers.server-socket.rule=PathPrefix(`/socket.io`)"
+      - "traefik.http.routers.server-socket.entrypoints=websecure"
+      - "traefik.http.routers.server-socket.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.server-socket.service=server-socket"
+      # - "traefik.http.routers.server-socket.tls.domains[0].main=example.com"
+      - "traefik.http.services.server-socket.loadbalancer.server.port=3000"
+      - "traefik.http.services.server-socket.loadbalancer.server.scheme=http"
 
       # WebSocket support
       - "traefik.http.middlewares.socketio-headers.headers.customrequestheaders.Connection=Upgrade"
       - "traefik.http.middlewares.socketio-headers.headers.customrequestheaders.Upgrade=websocket"
 
       # Attach middleware
-      - "traefik.http.routers.backend-socket.middlewares=socketio-headers"
+      - "traefik.http.routers.server-socket.middlewares=socketio-headers"
 
-      # Backend /api route
-      - "traefik.http.routers.backend-api.rule=PathPrefix(`/api`)"
-      - "traefik.http.routers.backend-api.entrypoints=websecure"
-      - "traefik.http.routers.backend-api.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.backend-api.service=backend-api"
-      - "traefik.http.routers.backend-api.middlewares=api-strip-prefix"
-      # - traefik.http.routers.backend-api.tls.domains[0].main=example.com
-      - "traefik.http.services.backend-api.loadbalancer.server.port=3000"
-      - "traefik.http.services.backend-api.loadbalancer.server.scheme=http"
+      # Server /api route
+      - "traefik.http.routers.server-api.rule=PathPrefix(`/api`)"
+      - "traefik.http.routers.server-api.entrypoints=websecure"
+      - "traefik.http.routers.server-api.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.server-api.service=server-api"
+      - "traefik.http.routers.server-api.middlewares=api-strip-prefix"
+      # - "traefik.http.routers.server-api.tls.domains[0].main=example.com"
+      - "traefik.http.services.server-api.loadbalancer.server.port=3000"
+      - "traefik.http.services.server-api.loadbalancer.server.scheme=http"
 
       - "traefik.http.middlewares.api-strip-prefix.stripprefix.prefixes=/api"
