--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ mdurl==0.1.2
 mergedeep==1.3.4
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
+mkdocs-glightbox==0.4.0
 mkdocs-material==9.6.11
 mkdocs-material-extensions==1.3.1
 mkdocs-swagger-ui-tag==0.7.1
